color and settings scrollbar fix

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -40,7 +40,7 @@
         color: $clr-off-white;
     }
     .fill-white {
-        fill: $clr-blue-100;
+        fill: $clr-off-white;
     }
     .fill-light {
         fill: $clr-blue-400;
